PA2/cool.output
Terminals unused in grammar

   LE
   ERROR
   "<="


State 6 conflicts: 2 shift/reduce
State 66 conflicts: 8 shift/reduce
State 127 conflicts: 8 shift/reduce
State 150 conflicts: 8 shift/reduce
State 161 conflicts: 8 shift/reduce
State 167 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error class
    5           | error class_list

    6 class: CLASS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    8 feature_list: /* empty */
    9             | feature
   10             | feature ';' feature_list
   11             | error ';' feature_list

   12 feature: OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expression
   14        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'

   15 formal_list: /* empty */
   16            | formal
   17            | formal ',' formal_list

   18 formal: OBJECTID ':' TYPEID

   19 expression: OBJECTID ASSIGN expression
   20           | expression '.' OBJECTID '(' parameter_list ')'
   21           | expression '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   22           | OBJECTID '(' parameter_list ')'
   23           | IF expression THEN expression ELSE expression FI
   24           | WHILE expression LOOP expression POOL
   25           | '{' expression ';' expression_list '}'
   26           | let_stmt
   27           | CASE expression OF case_list ';' ESAC
   28           | NEW TYPEID
   29           | ISVOID expression
   30           | expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression '/' expression
   34           | '~' expression
   35           | expression '<' expression
   36           | expression '<' '=' expression
   37           | expression '=' expression
   38           | NOT expression
   39           | '(' expression ')'
   40           | OBJECTID
   41           | STR_CONST
   42           | INT_CONST
   43           | BOOL_CONST

   44 case_list: OBJECTID ':' TYPEID DARROW expression
   45          | case_list ';' OBJECTID ':' TYPEID DARROW expression

   46 expression_list: /* empty */
   47                | expression
   48                | expression ';' expression_list
   49                | error ';' expression_list

   50 parameter_list: /* empty */
   51               | expression
   52               | parameter_list ',' expression

   53 let_stmt: LET OBJECTID ':' TYPEID IN expression
   54         | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   55         | LET OBJECTID ':' TYPEID ',' chained_let
   56         | LET OBJECTID ':' TYPEID ASSIGN expression ',' chained_let
   57         | LET OBJECTID ':' TYPEID ASSIGN error ',' chained_let

   58 chained_let: OBJECTID ':' TYPEID ',' chained_let
   59            | OBJECTID ':' TYPEID ASSIGN expression ',' chained_let
   60            | OBJECTID ':' TYPEID ASSIGN expression IN expression
   61            | OBJECTID ':' TYPEID IN expression
   62            | error ',' chained_let


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 20 21 22 39
')' (41) 14 20 21 22 39
'*' (42) 32
'+' (43) 30
',' (44) 17 52 55 56 57 58 59 62
'-' (45) 31
'.' (46) 20 21
'/' (47) 33
':' (58) 12 13 14 18 44 45 53 54 55 56 57 58 59 60 61
';' (59) 6 7 10 11 25 27 45 48 49
'<' (60) 35 36
'=' (61) 36 37
'@' (64) 21
'{' (123) 6 7 14 25
'}' (125) 6 7 14 25
'~' (126) 34
error (256) 4 5 11 49 57 62
CLASS (258) 6 7
ELSE (259) 23
FI (260) 23
IF (261) 23
IN (262) 53 54 60 61
INHERITS (263) 7
LET (264) 53 54 55 56 57
LOOP (265) 24
POOL (266) 24
THEN (267) 23
WHILE (268) 24
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 44 45
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 41
INT_CONST (276) 42
BOOL_CONST (277) 43
TYPEID (278) 6 7 12 13 14 18 21 28 44 45 53 54 55 56 57 58 59 60 61
OBJECTID (279) 12 13 14 18 19 20 21 22 40 44 45 53 54 55 56 57 58 59
    60 61
ASSIGN (280) 13 19 54 56 57 59 60
NOT (281) 38
LE (282)
ERROR (283)
LEAST (285)
"<=" (286)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
class_list (49)
    on left: 2 3 4 5, on right: 1 3 4 5
class (50)
    on left: 6 7, on right: 2 3 4
feature_list (51)
    on left: 8 9 10 11, on right: 6 7 10 11
feature (52)
    on left: 12 13 14, on right: 9 10
formal_list (53)
    on left: 15 16 17, on right: 14 17
formal (54)
    on left: 18, on right: 16 17
expression (55)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43, on right: 13 14 19 20 21 23 24 25 27 29 30
    31 32 33 34 35 36 37 38 39 44 45 47 48 51 52 53 54 56 59 60 61
case_list (56)
    on left: 44 45, on right: 27 45
expression_list (57)
    on left: 46 47 48 49, on right: 25 48 49
parameter_list (58)
    on left: 50 51 52, on right: 20 21 22 52
let_stmt (59)
    on left: 53 54 55 56 57, on right: 26
chained_let (60)
    on left: 58 59 60 61 62, on right: 55 56 57 58 59 62


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    5 class_list: error . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    class_list  go to state 6
    class       go to state 5


state 2

    6 class: CLASS . TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class
    4           | class_list . error class

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    3 class_list: class_list . class
    4           | class_list . error class
    5           | error class_list .

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end   reduce using rule 5 (class_list)
    error  [reduce using rule 5 (class_list)]
    CLASS  [reduce using rule 5 (class_list)]

    class  go to state 10


state 7

    6 class: CLASS TYPEID . '{' feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


state 8

    0 $accept: program $end .

    $default  accept


state 9

    4 class_list: class_list error . class

    CLASS  shift, and go to state 2

    class  go to state 13


state 10

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 11

    7 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


state 12

    6 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (feature_list)

    feature_list  go to state 17
    feature       go to state 18


state 13

    4 class_list: class_list error class .

    $default  reduce using rule 4 (class_list)


state 14

    7 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


state 15

   11 feature_list: error . ';' feature_list

    ';'  shift, and go to state 20


state 16

   12 feature: OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expression
   14        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


state 17

    6 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 23


state 18

    9 feature_list: feature .
   10             | feature . ';' feature_list

    ';'  shift, and go to state 24

    $default  reduce using rule 9 (feature_list)


state 19

    7 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (feature_list)

    feature_list  go to state 25
    feature       go to state 18


state 20

   11 feature_list: error ';' . feature_list

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (feature_list)

    feature_list  go to state 26
    feature       go to state 18


state 21

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 27


state 22

   14 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


state 23

    6 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


state 24

   10 feature_list: feature ';' . feature_list

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (feature_list)

    feature_list  go to state 32
    feature       go to state 18


state 25

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 33


state 26

   11 feature_list: error ';' feature_list .

    $default  reduce using rule 11 (feature_list)


state 27

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 12 (feature)


state 28

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 35


state 29

   14 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 36


state 30

   16 formal_list: formal .
   17            | formal . ',' formal_list

    ','  shift, and go to state 37

    $default  reduce using rule 16 (formal_list)


state 31

    6 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 32

   10 feature_list: feature ';' feature_list .

    $default  reduce using rule 10 (feature_list)


state 33

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 38


state 34

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 53
    let_stmt    go to state 54


state 35

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 55


state 36

   14 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 56


state 37

   17 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 57
    formal       go to state 30


state 38

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


state 39

   23 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 58
    let_stmt    go to state 54


state 40

   53 let_stmt: LET . OBJECTID ':' TYPEID IN expression
   54         | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   55         | LET . OBJECTID ':' TYPEID ',' chained_let
   56         | LET . OBJECTID ':' TYPEID ASSIGN expression ',' chained_let
   57         | LET . OBJECTID ':' TYPEID ASSIGN error ',' chained_let

    OBJECTID  shift, and go to state 59


state 41

   24 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 60
    let_stmt    go to state 54


state 42

   27 expression: CASE . expression OF case_list ';' ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 61
    let_stmt    go to state 54


state 43

   28 expression: NEW . TYPEID

    TYPEID  shift, and go to state 62


state 44

   29 expression: ISVOID . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 63
    let_stmt    go to state 54


state 45

   41 expression: STR_CONST .

    $default  reduce using rule 41 (expression)


state 46

   42 expression: INT_CONST .

    $default  reduce using rule 42 (expression)


state 47

   43 expression: BOOL_CONST .

    $default  reduce using rule 43 (expression)


state 48

   19 expression: OBJECTID . ASSIGN expression
   22           | OBJECTID . '(' parameter_list ')'
   40           | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 40 (expression)


state 49

   38 expression: NOT . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 66
    let_stmt    go to state 54


state 50

   34 expression: '~' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 67
    let_stmt    go to state 54


state 51

   39 expression: '(' . expression ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 68
    let_stmt    go to state 54


state 52

   25 expression: '{' . expression ';' expression_list '}'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '('         shift, and go to state 51
    '{'         shift, and go to state 52

    expression  go to state 69
    let_stmt    go to state 54


state 53

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .
   20 expression: expression . '.' OBJECTID '(' parameter_list ')'
   21           | expression . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '<' '=' expression
   37           | expression . '=' expression

    '='  shift, and go to state 70
    '<'  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '.'  shift, and go to state 76
    '@'  shift, and go to state 77

    $default  reduce using rule 13 (feature)


state 54

   26 expression: let_stmt .

    $default  reduce using rule 26 (expression)


state 55

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 56

   14 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 78


state 57

   17 formal_list: formal ',' formal_list .

    $default  reduce using rule 17 (formal_list)


state 58

   20 expression: expression . '.' OBJECTID '(' parameter_list ')'
   21           | expression . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   23           | IF expression . THEN expression ELSE expression FI
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '<' '=' expression
   37           | expression . '=' expression

    THEN  shift, and go to state 79
    '='   shift, and go to state 70
    '<'   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '.'   shift, and go to state 76
    '@'   shift, and go to state 77


state 59

   53 let_stmt: LET OBJECTID . ':' TYPEID IN expression
   54         | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression
   55         | LET OBJECTID . ':' TYPEID ',' chained_let
   56         | LET OBJECTID . ':' TYPEID ASSIGN expression ',' chained_let
   57         | LET OBJECTID . ':' TYPEID ASSIGN error ',' chained_let

    ':'  shift, and go to state 80


state 60

   20 expression: expression . '.' OBJECTID '(' parameter_list ')'
   21           | expression . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   24           | WHILE expression . LOOP expression POOL
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '<' '=' expression
   37           | expression . '=' expression

    LOOP  shift, and go to state 81
    '='   shift, and go to state 70
    '<'   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '.'   shift, and go to state 76
    '@'   shift, and go to state 77


state 61

   20 expression: expression . '.' OBJECTID '(' parameter_list ')'
   21           | expression . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   27           | CASE expression . OF case_list ';' ESAC
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '<' '=' expression
   37           | expression . '=' expression

    OF   shift, and go to state 82
    '='  shift, and go to state 70
    '<'  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '.'  shift, and go to state 76
    '@'  shift, and go to state 77


state 62

   28 expression: NEW TYPEID .

    $default  reduce using rule 28 (expression)


state 63

   20 expression: expression . '.' OBJECTID '(' parameter_list ')'
   21           | expression . '@' TYPEID '.' OBJECTID '(' parameter_list ')'
   29           | ISVOID expression .
   30           | expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . '<' expression
   36           | expression . '<' '=' expression
   37           | expression . '=' expression

    '.'  shift, and go to state 76
    '@'  shift, and go to state 77

    $default  reduce using rule 29 (expression)


state 64

   19 expression: OBJECTID ASSIGN . expression
